<resources>
    <string name="app_name">AmirHome.com</string>
    <string name="action_settings">تنظیمات</string>
    <string name="notifyAction">Replace with your own action</string>
    <string name="i_am_amir_hosseinzade">من امیر حسین زاده برنامه نویس هستم</string>
    <string name="lorem_ipsum">
Lorem Ipsum ist ein einfacher Demo-Text für die Print- und Schriftindustrie. Lorem Ipsum ist in der
Industrie bereits der Standard Demo-Text seit 1500, als ein unbekannter Schriftsteller eine
Hand voll Wörter nahm und diese durcheinander warf um ein Musterbuch zu erstellen. Es hat
nicht nur 5 Jahrhunderte überlebt, sondern auch in Spruch in die elektronische Schriftbearbeitung
geschafft (bemerke, nahezu unverändert). Bekannt wurde es 1960, mit dem erscheinen von
"Letraset", welches Passagen von Lorem Ipsum enhielt, so wie Desktop Software wie "Aldus
PageMaker" - ebenfalls mit Lorem Ipsum.ülke öğretmen çocuk ışık
    </string>
    <string name="logo">logo</string>
    <string name="img_assets">Asseet</string>
    <string name="img_resource">Resource</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">ActivityDetail</string>
    <string name="title_activity_course">Course</string>
</resources>
