<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings2"
        android:onClick="actionResourceOnclickHandler"
        android:orderInCategory="102"
        android:title="@string/img_resource"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings3"
        android:onClick="actionAssetsOnclickHandler"
        android:orderInCategory="103"
        android:title="@string/img_assets"
        app:showAsAction="ifRoom" />
</menu>
